// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`styled function > Snapshot tests (runtime: automatic) > 'styled' tag extending existing component should match snapshot 1`] = `
"
.🐻-3239996223{background:green;}.🐻-1641059616{color:red;}

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { styled } from '@kuma-ui/core';
const GreenButton = props => {
      const combinedClassName = [props.className, \\"🐻-3239996223\\"].filter(Boolean).join(\\" \\");
      return <__Box as=\\"button\\" {...props} className={combinedClassName} IS_KUMA_DEFAULT />;
    };
const GreenButtonRedText = props => {
      const combinedClassName = [props.className, \\"🐻-1641059616\\"].filter(Boolean).join(\\" \\");
      return <GreenButton {...props} className={combinedClassName} IS_KUMA_DEFAULT />;
    };
function App() {
  return <GreenButton>test</GreenButton>;
}
"
`;

exports[`styled function > Snapshot tests (runtime: automatic) > 'styled' tag function usage should match snapshot 1`] = `
"
.🐻-101236145{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.🐻-101236145:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.🐻-101236145{flex-direction:column;}}

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { styled } from '@kuma-ui/core';
const Box = props => {
      const combinedClassName = [props.className, \\"🐻-101236145\\"].filter(Boolean).join(\\" \\");
      return <__Box as=\\"div\\" {...props} className={combinedClassName} IS_KUMA_DEFAULT />;
    };
function App() {
  return <Box>test</Box>;
}
"
`;

exports[`styled function > Snapshot tests (runtime: automatic) > 'styled' tag property usage should match snapshot 1`] = `
"
.🐻-101236145{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.🐻-101236145:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.🐻-101236145{flex-direction:column;}}

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { styled } from '@kuma-ui/core';
const Box = props => {
      const combinedClassName = [props.className, \\"🐻-101236145\\"].filter(Boolean).join(\\" \\");
      return <__Box as=\\"div\\" {...props} className={combinedClassName} IS_KUMA_DEFAULT />;
    };
function App() {
  return <Box>test</Box>;
}
"
`;

exports[`styled function > Snapshot tests (runtime: automatic) > using className prop should match snapshot 1`] = `
"
.🐻-101236145{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.🐻-101236145:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.🐻-101236145{flex-direction:column;}}

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { styled, css } from '@kuma-ui/core';
const Box = props => {
      const combinedClassName = [props.className, \\"🐻-101236145\\"].filter(Boolean).join(\\" \\");
      return <__Box as=\\"span\\" {...props} className={combinedClassName} IS_KUMA_DEFAULT />;
    };
function App() {
  return <Box className={css({
    boxShadow: '0 1px 2px 0 rgba(0, 0, 0, 0.05)'
  })}>
              test
            </Box>;
}
"
`;

exports[`styled function > Snapshot tests (runtime: automatic) > using pseudo elements should match snapshot 1`] = `
"
.🐻-101236145{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.🐻-101236145:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.🐻-101236145{flex-direction:column;}}

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { styled } from '@kuma-ui/core';
const Box = props => {
      const combinedClassName = [props.className, \\"🐻-101236145\\"].filter(Boolean).join(\\" \\");
      return <__Box as=\\"div\\" {...props} className={combinedClassName} IS_KUMA_DEFAULT />;
    };
function App() {
  return <Box>test</Box>;
}
"
`;

exports[`styled function > Snapshot tests (runtime: classic) > 'styled' tag extending existing component should match snapshot 1`] = `
"
.🐻-3239996223{background:green;}.🐻-1641059616{color:red;}

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { styled } from '@kuma-ui/core';
const GreenButton = props => {
      const combinedClassName = [props.className, \\"🐻-3239996223\\"].filter(Boolean).join(\\" \\");
      return <__Box as=\\"button\\" {...props} className={combinedClassName} IS_KUMA_DEFAULT />;
    };
const GreenButtonRedText = props => {
      const combinedClassName = [props.className, \\"🐻-1641059616\\"].filter(Boolean).join(\\" \\");
      return <GreenButton {...props} className={combinedClassName} IS_KUMA_DEFAULT />;
    };
function App() {
  return <GreenButton>test</GreenButton>;
}
"
`;

exports[`styled function > Snapshot tests (runtime: classic) > 'styled' tag function usage should match snapshot 1`] = `
"
.🐻-101236145{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.🐻-101236145:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.🐻-101236145{flex-direction:column;}}

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { styled } from '@kuma-ui/core';
const Box = props => {
      const combinedClassName = [props.className, \\"🐻-101236145\\"].filter(Boolean).join(\\" \\");
      return <__Box as=\\"div\\" {...props} className={combinedClassName} IS_KUMA_DEFAULT />;
    };
function App() {
  return <Box>test</Box>;
}
"
`;

exports[`styled function > Snapshot tests (runtime: classic) > 'styled' tag property usage should match snapshot 1`] = `
"
.🐻-101236145{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.🐻-101236145:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.🐻-101236145{flex-direction:column;}}

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { styled } from '@kuma-ui/core';
const Box = props => {
      const combinedClassName = [props.className, \\"🐻-101236145\\"].filter(Boolean).join(\\" \\");
      return <__Box as=\\"div\\" {...props} className={combinedClassName} IS_KUMA_DEFAULT />;
    };
function App() {
  return <Box>test</Box>;
}
"
`;

exports[`styled function > Snapshot tests (runtime: classic) > using className prop should match snapshot 1`] = `
"
.🐻-101236145{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.🐻-101236145:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.🐻-101236145{flex-direction:column;}}

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { styled, css } from '@kuma-ui/core';
const Box = props => {
      const combinedClassName = [props.className, \\"🐻-101236145\\"].filter(Boolean).join(\\" \\");
      return <__Box as=\\"span\\" {...props} className={combinedClassName} IS_KUMA_DEFAULT />;
    };
function App() {
  return <Box className={css({
    boxShadow: '0 1px 2px 0 rgba(0, 0, 0, 0.05)'
  })}>
              test
            </Box>;
}
"
`;

exports[`styled function > Snapshot tests (runtime: classic) > using pseudo elements should match snapshot 1`] = `
"
.🐻-101236145{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.🐻-101236145:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.🐻-101236145{flex-direction:column;}}

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { styled } from '@kuma-ui/core';
const Box = props => {
      const combinedClassName = [props.className, \\"🐻-101236145\\"].filter(Boolean).join(\\" \\");
      return <__Box as=\\"div\\" {...props} className={combinedClassName} IS_KUMA_DEFAULT />;
    };
function App() {
  return <Box>test</Box>;
}
"
`;

exports[`styled function > Snapshot tests (runtime: undefined) > 'styled' tag extending existing component should match snapshot 1`] = `
"
.🐻-3239996223{background:green;}.🐻-1641059616{color:red;}

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { styled } from '@kuma-ui/core';
const GreenButton = props => {
      const combinedClassName = [props.className, \\"🐻-3239996223\\"].filter(Boolean).join(\\" \\");
      return <__Box as=\\"button\\" {...props} className={combinedClassName} IS_KUMA_DEFAULT />;
    };
const GreenButtonRedText = props => {
      const combinedClassName = [props.className, \\"🐻-1641059616\\"].filter(Boolean).join(\\" \\");
      return <GreenButton {...props} className={combinedClassName} IS_KUMA_DEFAULT />;
    };
function App() {
  return <GreenButton>test</GreenButton>;
}
"
`;

exports[`styled function > Snapshot tests (runtime: undefined) > 'styled' tag function usage should match snapshot 1`] = `
"
.🐻-101236145{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.🐻-101236145:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.🐻-101236145{flex-direction:column;}}

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { styled } from '@kuma-ui/core';
const Box = props => {
      const combinedClassName = [props.className, \\"🐻-101236145\\"].filter(Boolean).join(\\" \\");
      return <__Box as=\\"div\\" {...props} className={combinedClassName} IS_KUMA_DEFAULT />;
    };
function App() {
  return <Box>test</Box>;
}
"
`;

exports[`styled function > Snapshot tests (runtime: undefined) > 'styled' tag property usage should match snapshot 1`] = `
"
.🐻-101236145{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.🐻-101236145:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.🐻-101236145{flex-direction:column;}}

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { styled } from '@kuma-ui/core';
const Box = props => {
      const combinedClassName = [props.className, \\"🐻-101236145\\"].filter(Boolean).join(\\" \\");
      return <__Box as=\\"div\\" {...props} className={combinedClassName} IS_KUMA_DEFAULT />;
    };
function App() {
  return <Box>test</Box>;
}
"
`;

exports[`styled function > Snapshot tests (runtime: undefined) > using className prop should match snapshot 1`] = `
"
.🐻-101236145{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.🐻-101236145:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.🐻-101236145{flex-direction:column;}}

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { styled, css } from '@kuma-ui/core';
const Box = props => {
      const combinedClassName = [props.className, \\"🐻-101236145\\"].filter(Boolean).join(\\" \\");
      return <__Box as=\\"span\\" {...props} className={combinedClassName} IS_KUMA_DEFAULT />;
    };
function App() {
  return <Box className={css({
    boxShadow: '0 1px 2px 0 rgba(0, 0, 0, 0.05)'
  })}>
              test
            </Box>;
}
"
`;

exports[`styled function > Snapshot tests (runtime: undefined) > using pseudo elements should match snapshot 1`] = `
"
.🐻-101236145{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.🐻-101236145:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.🐻-101236145{flex-direction:column;}}

import { Box as __Box } from \\"@kuma-ui/core\\";
import React from \\"react\\";
import { styled } from '@kuma-ui/core';
const Box = props => {
      const combinedClassName = [props.className, \\"🐻-101236145\\"].filter(Boolean).join(\\" \\");
      return <__Box as=\\"div\\" {...props} className={combinedClassName} IS_KUMA_DEFAULT />;
    };
function App() {
  return <Box>test</Box>;
}
"
`;
